fix: APPS-3033 Remove Nav Menu Page Overflow (#776)
* fix: remove page overflow

* wip

* Move search button into nav menu list; update CSS

* Minor fixes

* Minor fixes contd

* Run linter

* fix: add extra margin spacing to nav menu

* fix: remove spacing outside of menu overlay

---------

--- a/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
+++ b/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
@@ -4,8 +4,8 @@
 
     .primary {
         width: 100%;
-        max-width: var(--ftva-container-max-width);
         margin: 0 auto;
+        padding: 0;
 
         .donate-button {
             display: flex;
@@ -16,6 +16,11 @@
             font-size: 20px;
             font-weight: 500;
             line-height: normal;
+        }
+    }
+    @media #{$small} {
+        .primary {
+            padding-inline: 18px;
         }
     }
 }
